--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,8 +5,39 @@
 		width		:450px;
 		max-width	:450px;
 		flex-wrap	:nowrap;
-		margin-top: -10px;  
+		margin: -10px 0 0 -10px;  
 	}
+
+    .client-table {
+		/* font-family: "Trebuchet MS", Arial, Helvetica, sans-serif; */
+		border-collapse: collapse;
+		width: 100%;
+	}
+
+	.client-table td, .client-table th {
+		border: 1px solid #ddd;
+		padding: 8px;
+	}
+
+	.client-table tr:nth-child(even){background-color: #f2f2f2;}
+
+	.client-table tr:hover {background-color: #ddd;}
+
+	.client-table th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: #6dac20;
+		color: white;
+		text-shadow: 1px 1px #333333;
+	}
+    .client-table--data {
+		word-break: break-all;
+		width: 35%;
+    }
+    #clientList {
+        display: none;
+    }
 </style>
 <TMPL_IF MQTTGATEWAY_INSTALLED>
     <TMPL_IF FORM_SETTINGS>
@@ -33,9 +64,8 @@
 
             
             <div class="lb_flex-container Main">
-			    <div class="lb_flex-item-label">
-			</div>
-			<div class="lb_flex-item-spacer"></div>
+			    <div class="lb_flex-item-label">&nbsp;</div>
+                <div class="lb_flex-item-spacer"></div>
 			<div class="lb_flex-item">
 			    <a href="javascript:saveUnifi();" id="btnsavemqtt" class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left ui-icon-check" 
 						data-transition="flow"><TMPL_VAR COMMON.SAVE_BTN></a>
@@ -44,8 +74,34 @@
 			<div class="lb_flex-item-spacer"></div>
 			<div class="lb_flex-item-help hint"></div>
 			<div class="lb_flex-item-spacer"></div>
-		</div>
+			</div>
+			
+		
+            <div class="wide"><TMPL_VAR UNIFI.CLIENTS></div>
+            <br>
+
+            <div id="noClients">
+                <h4><TMPL_VAR UNIFI.NO_CLIENTS></h4>
+            </div>
+            <div id="clientList">
+                <p><TMPL_VAR UNIFI.CLIENT_SELECTION></p>
+                <table class="client-table">
+                    <thead>
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th><TMPL_VAR UNIFI.NAME></th>
+                            <th><TMPL_VAR UNIFI.MAC></th>
+                            <th><TMPL_VAR UNIFI.IP></th>
+                            <th><TMPL_VAR UNIFI.SSID></th>
+                            <th><TMPL_VAR UNIFI.EXPERIENCE></th>
+                            <th><TMPL_VAR UNIFI.TYPE></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </form>
+
     </TMPL_IF>
 <TMPL_ELSE>
     <div class="wide"><TMPL_VAR UNIFI.CONTROLLER></div>
@@ -55,31 +111,93 @@
 
 
 <script>
-    var cfg;
-    var creds = { };
-    var creds_changed = false;
+var cfg;
+var creds = { };
+var creds_changed = false;
+let existingClients = [];
 
-    $(function() {
+let allClients = [];
 
-        // Parse config
-        cfgstr = '<TMPL_VAR JSONCONFIG>';
-        if (cfgstr) cfg = JSON.parse(cfgstr);
+$(function() {
 
-        // Elements in Main
-        for(var elemname in cfg) {
-            var inputType = $("#Main\\."+elemname).attr('type');
-            if ( !inputType ) {
-                inputType = $("[name='Main\\."+elemname+"']").attr('type');
-            }
-            $("#Main\\."+elemname).val(cfg[elemname]);
-            
-        }
+    // Parse config
+    cfgstr = '<TMPL_VAR JSONCONFIG>';
+    if (cfgstr) cfg = JSON.parse(cfgstr);
+
+    if (null == cfg.clients) {
+        cfg.clients = [];
+    } 
+    existingClients = cfg.clients.map(client => client.mac);
+    // Elements in Main
+    for(var elemname in cfg) {
+        var inputType = $("#Main\\."+elemname).attr('type');
+        $("#Main\\."+elemname).val(cfg[elemname]);
+    }
+
+    let clients = '<TMPL_VAR CLIENTS>';
+    if (clients) {
+        allClients = JSON.parse(clients);
+        allClients = sortClients(allClients);
+        
+        renderClients();    
+    }
+});
+
+function sortClients(clients) {
+    return clients.sort((a, b) => {
+        if (existingClients.includes(a.mac)) return -1;
+        if (existingClients.includes(b.mac)) return 1;
+        if (a.name < b.name) return -1;
+        if (a.name > b.name) return 1;
+        return 0;
     });
+}
+
+function renderClients() {
+    $('#noClients').css('display', 'none');
+    $('#clientList').css('display', 'block');
+
+    allClients.forEach(client => {
+        const selected = existingClients.includes(client.mac);
+        const row = `<tr>
+            <td><input onChange="clientSelection('${client.mac}')" type="checkbox" value="1" ${selected ? 'checked' : ''} name="${client.mac}" /></td>
+            <td class="client-table--data">${client.name}</td>
+            <td class="">${client.mac}</td>
+            <td class="">${client.ip || ''}</td>
+            <td class="">${client.ssid || ''}</td>
+            <td class="">${client.experience ? client.experience + '%' : ''}</td>
+            <td class="">${client.type}</td>
+            </tr>`;
+        $('#clientList table tbody').append(row);
+    });
+}
+
+function clientSelection(mac) {
+    
+    const client = allClients.find(client => client.mac === mac);
+    if (existingClients.includes(mac)) {
+        existingClients = existingClients.filter(m => m != mac);
+        cfg.clients = cfg.clients.filter(client => client.mac != mac);
+    } else {
+        cfg.clients.push(client);
+        existingClients.push(mac);
+    }
+
+    $.ajax({
+        type: 'POST',
+        data: {
+            ajax: 'saveclients',
+            clients: JSON.stringify(cfg.clients)
+        }
+    }).fail(data => {
+        console.log('saving failed', data);
+    })
+}
 
 // Save Unifi Settings
 function saveUnifi() {
 	$("#unifi_hint").attr("style", "color:blue").html("<TMPL_VAR COMMON.HINT_SAVE_SAVING>");
-	console.log ("Saving", $('#Main\\.ipaddress').val(), $('#Main\\.username').val(), $('#Main\\.password').val());
+	console.log ("Saving", $('#Main\\.ipaddress').val(), $('#Main\\.username').val());
 	$.ajax( { 
 			type: 'POST',
 			data: { 
@@ -101,10 +219,15 @@ function saveUnifi() {
             console.log( "saving failed", data );
 		    $("#unifi_hint").attr("style", "color:red").html("<TMPL_VAR COMMON.HINT_SAVE_ERROR>: "+data.error);
         }
+
+        if(data.clients) {
+            allClients = data.clients;
+            
+            renderClients();
+        }
 	})
 	.always(function( data ) {
 		console.log( "save Finished" );
 	});
 }
 </script>
-    
