prepare for loxberry 3

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,5 +1,5 @@
-<script type="module" crossorigin src="/admin/plugins/unifi_presence/assets/main.598977fd.js"></script>
-<link rel="stylesheet" href="/admin/plugins/unifi_presence/assets/main.7cbb116a.css">
+<script type="module" crossorigin src="/admin/plugins/unifi_presence/assets/main-542444cd.js"></script>
+<link rel="stylesheet" href="/admin/plugins/unifi_presence/assets/build-ebc0af1d.css">
 <div id="unifiPresence"></div>
 
 
